--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.11.1",
+    "winston": "^3.9.0"
   },
   "type": "module",
   "imports": {
