--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.1",
+    "node-ssh": "^13.1.0",
     "path": "^0.12.7",
     "pg": "^8.11.1",
     "winston": "^3.9.0"
